// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputElement completion should complete in the middle of text 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "The name of the  contact",
  },
  Object {
    "name": "contact.first_name",
    "summary": "The first name of a  contact",
  },
  Object {
    "name": "contact.name",
    "summary": "The name of the  contact",
  },
  Object {
    "name": "contact.display",
    "summary": "The name or urn of the  contact",
  },
  Object {
    "name": "contact.fields",
    "summary": "Custom fields on a  contact",
  },
  Object {
    "name": "contact.urn",
    "summary": "The primary urn for a  contact",
  },
  Object {
    "name": "contact.language",
    "summary": "The language iso code for a  contact",
  },
  Object {
    "name": "contact.created_on",
    "summary": "The creation date for the  contact",
  },
  Object {
    "name": "contact.groups",
    "summary": "The groups a  contact is a member of",
  },
  Object {
    "name": "contact.urns",
    "summary": "The urns for a  contact",
  },
  Object {
    "name": "contact.uuid",
    "summary": "The uuid of the  contact",
  },
  Object {
    "name": "contact.channel",
    "summary": "A  contact's preferred channel",
  },
]
`;

exports[`TextInputElement completion should handle completion w/ "Tab" key 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "The name of the  contact",
  },
  Object {
    "name": "contact.first_name",
    "summary": "The first name of a  contact",
  },
  Object {
    "name": "contact.name",
    "summary": "The name of the  contact",
  },
  Object {
    "name": "contact.display",
    "summary": "The name or urn of the  contact",
  },
  Object {
    "name": "contact.fields",
    "summary": "Custom fields on a  contact",
  },
  Object {
    "name": "contact.urn",
    "summary": "The primary urn for a  contact",
  },
  Object {
    "name": "contact.language",
    "summary": "The language iso code for a  contact",
  },
  Object {
    "name": "contact.created_on",
    "summary": "The creation date for the  contact",
  },
  Object {
    "name": "contact.groups",
    "summary": "The groups a  contact is a member of",
  },
  Object {
    "name": "contact.urns",
    "summary": "The urns for a  contact",
  },
  Object {
    "name": "contact.uuid",
    "summary": "The uuid of the  contact",
  },
  Object {
    "name": "contact.channel",
    "summary": "A  contact's preferred channel",
  },
]
`;

exports[`TextInputElement filtering should bring up completion menu for top level options 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "the contact",
  },
  Object {
    "name": "fields",
    "summary": "the custom field values of the contact",
  },
  Object {
    "name": "urns",
    "summary": "the URN values of the contact",
  },
  Object {
    "name": "results",
    "summary": "the current run results",
  },
  Object {
    "name": "input",
    "summary": "the current input from the contact",
  },
  Object {
    "name": "run",
    "summary": "the current run",
  },
  Object {
    "name": "child",
    "summary": "the last child run",
  },
  Object {
    "name": "parent",
    "summary": "the parent of the run",
  },
  Object {
    "name": "webhook",
    "summary": "the parsed JSON response of the last webhook call",
  },
  Object {
    "name": "trigger",
    "summary": "the trigger that started this session",
  },
]
`;

exports[`TextInputElement filtering should show filter at the second level 1`] = `
Array [
  Object {
    "name": "contact.first_name",
    "summary": "the first name of the contact",
  },
]
`;

exports[`TextInputElement filtering should show filter options 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "the contact",
  },
]
`;

exports[`TextInputElement function context should use the most recent incomplete function 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "the contact",
  },
]
`;

exports[`TextInputElement navigation should filter after tabbing 1`] = `
Array [
  Object {
    "name": "contact.first_name",
    "summary": "the first name of the contact",
  },
]
`;
